<resources>
    <string name="app_name">My Application</string>
    <string name="roll">ROLL!</string>
    <string name="rollDice">Roll Dice!</string>
    <string name="rules">RULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        RULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES
        \n\nRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULESRULES</string>
    <string name="playerName">Enter your name</string>
    <string name="update">UPDATE</string>
    <string name="yourName">Your Name</string>


</resources>